commit validação data validade cartao

--- a/src/main/webapp/i18n/pt-br/cartaoCredito.json
+++ b/src/main/webapp/i18n/pt-br/cartaoCredito.json
@@ -15,9 +15,10 @@
       "detail": {
         "title": "Cartao Credito"
       },
+      "nomeCartao": "Nome Cartao",
       "bandeira": "Bandeira",
       "numero": "Numero",
-      "cv": "Cv",
+      "cvv": "CVV",
       "validade": "Validade"
     }
   }
