--- a/src/main/webapp/i18n/pt-br/global.json
+++ b/src/main/webapp/i18n/pt-br/global.json
@@ -110,6 +110,8 @@
     },
     "validation": {
       "required": "O campo é obrigatório.",
+      "forbiddenName": "Este campo não pode conter a palavra {{forbiddenName}}",
+      "validadeCart": "Mês e ano tem que ter um valor maior ou igual a {{mesanoMin}}",
       "minlength": "Este campo deve ter pelo menos {{ min }} caracteres.",
       "maxlength": "Este campo não pode ter mais de {{ max }} caracteres.",
       "min": "Este campo deve ser maior que {{ min }}.",
