--- a/src/main/webapp/i18n/pt-br/cartaoCredito.json
+++ b/src/main/webapp/i18n/pt-br/cartaoCredito.json
@@ -17,7 +17,7 @@
       },
       "nomeCartao": "Nome Cartao",
       "bandeira": "Bandeira",
-      "numero": "Numero",
+      "numero": "Número",
       "cvv": "CVV",
       "validade": "Validade"
     }
