inserção da entidade pessoas

--- a/src/main/webapp/i18n/pt-br/global.json
+++ b/src/main/webapp/i18n/pt-br/global.json
@@ -8,6 +8,7 @@
       "entities": {
         "main": "Entidades",
         "cartaoCredito": "Cartao Credito",
+        "pessoa": "Pessoa",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
